--- a/locales/en.default.schema.json
+++ b/locales/en.default.schema.json
@@ -1886,6 +1886,9 @@
                 "label": "CONTENT",
                 "info": "Choose an icon or add an image for each column or row."
               },
+              "heading": {
+                "info": "Leave the heading label blank to hide the icon column."
+              },
               "first_icon": {
                 "label": "First icon"
               },
